<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>ru.strict</groupId>
    <artifactId>jstrict-parent</artifactId>
    <version>0.1.37</version>
    <packaging>pom</packaging>
    <name>jstrict-parent</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.8</jdk.version>

        <plugin.compiler.version>3.8.0</plugin.compiler.version>
        <plugin.jar.version>3.1.1</plugin.jar.version>
        <plugin.dependency.version>3.1.1</plugin.dependency.version>
        <plugin.surefire.version>2.22.1</plugin.surefire.version>
        <plugin.assembly.version>3.1.1</plugin.assembly.version>
        <plugin.source.version>3.1.0</plugin.source.version>
        <plugin.site.version>3.7.1</plugin.site.version>
        <!-- Нельзя указывать версию больше этой -->
        <plugin.info.report.version>2.9</plugin.info.report.version>
        <plugin.jacoco.version>0.8.3</plugin.jacoco.version>
        <plugin.spotbugs.version>3.1.11</plugin.spotbugs.version>
        <plugin.pmd.version>3.12.0</plugin.pmd.version>
        <plugin.sonar.version>3.7.0.1746</plugin.sonar.version>
        <plugin.google.findbugs.version>3.0.1</plugin.google.findbugs.version>
        <plugin.xml.version>1.0.2</plugin.xml.version>
        <plugin.launch4j.version>1.7.16</plugin.launch4j.version>

        <app.main.class>ru.strict.app.Main</app.main.class>
        <app.name>${project.name}-${project.version}</app.name>
        <app.icon>_sources/logo.ico</app.icon>
        <jstrict.version>0.1.37</jstrict.version>

        <jacoco.coverage>0%</jacoco.coverage>
        <pmd.failure.priority>5</pmd.failure.priority>
        <pmd.max.alowed.violations>0</pmd.max.alowed.violations>
        <pmd.ruleset.url>/pmd-ruleset.xml</pmd.ruleset.url>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jutils</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jfile</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jpatterns</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jmodels</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>ioc</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jneuralnetwork</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jfx</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jswing</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>joffice</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jdb-core</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jdb-test</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jdb-jdbc</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jdb-spring</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jdb-hibernate</artifactId>
                <version>${jstrict.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.strict</groupId>
                <artifactId>jdb-mybatis</artifactId>
                <version>${jstrict.version}</version>
            </dependency>

            <!-- test -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
	        <dependency>
	            <groupId>org.hamcrest</groupId>
	            <artifactId>hamcrest-core</artifactId>
	            <version>1.3</version>
	        </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
	    <pluginManagement>
	    	<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${plugin.compiler.version}</version>
					<configuration>
	                    <encoding>${project.build.sourceEncoding}</encoding>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${plugin.dependency.version}</version>
					<configuration>
						<outputDirectory>${project.build.directory}/libs/</outputDirectory>
						<overWriteReleases>false</overWriteReleases>
						<overWriteSnapshots>false</overWriteSnapshots>
						<overWriteIfNewer>true</overWriteIfNewer>
					</configuration>
					<executions>
						<execution>
							<id>copy-dependencies</id>
							<phase>package</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${plugin.jar.version}</version>
					<configuration>
						<archive>
							<addMavenDescriptor>false</addMavenDescriptor>
							<compress>true</compress>
							<manifest>
								<addClasspath>true</addClasspath>
								<classpathPrefix>libs/</classpathPrefix>
								<mainClass>${app.main.class}</mainClass>
							</manifest>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${plugin.assembly.version}</version>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>single</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
								<classpathPrefix>libs/</classpathPrefix>
								<mainClass>${app.main.class}</mainClass>
							</manifest>
						</archive>
						<descriptorRefs>
							<descriptorRef>jar-with-dependencies</descriptorRef>
						</descriptorRefs>
					</configuration>
				</plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-surefire-plugin</artifactId>
	                <version>${plugin.surefire.version}</version>
	                <executions>
	                    <execution>
	                        <id>unit-tests</id>
	                        <phase>test</phase>
	                        <goals>
	                            <goal>test</goal>
	                        </goals>
	                        <configuration>
	                            <printSummary>true</printSummary>
	                            <includes>
	                                <include>ru/strict/**</include>
	                            </includes>
	                            <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
	                        </configuration>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.jacoco</groupId>
	                <artifactId>jacoco-maven-plugin</artifactId>
	                <version>${plugin.jacoco.version}</version>
	                <executions>
	                    <execution>
	                        <goals>
	                            <goal>prepare-agent</goal>
	                        </goals>
	                    </execution>
	                    <execution>
                            <id>jacoco-check</id>
                            <goals>
                            	<goal>check</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <rule>
                                        <element>BUNDLE</element>
                                        <limits>
                                            <limit>
                                                <counter>LINE</counter>
                                                <value>COVEREDRATIO</value>
                                            	<minimum>${jacoco.coverage}</minimum>
                                        	</limit>
                                    	</limits>
                                	</rule>
                        		</rules>
                            </configuration>
                        </execution>
	                    <execution>
	                        <id>jacoco-report</id>
	                        <phase>test</phase>
	                        <goals>
	                            <goal>report</goal>
	                        </goals>
	                        <configuration>
	                            <outputDirectory>target/jacoco-report</outputDirectory>
	                        </configuration>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-source-plugin</artifactId>
	                <version>${plugin.source.version}</version>
	                <executions>
	                    <execution>
	                        <id>attach-sources</id>
	                        <phase>verify</phase>
	                        <goals>
	                            <goal>jar</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-site-plugin</artifactId>
	                <version>${plugin.site.version}</version>
	            </plugin>
                <plugin>
                	<groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${plugin.sonar.version}</version>
                </plugin>
	            <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>${plugin.pmd.version}</version>
                    <configuration>
                        <failOnViolation>true</failOnViolation>
                        <printFailingErrors>true</printFailingErrors>
                        <failurePriority>${pmd.failure.priority}</failurePriority>
                        <maxAllowedViolations>${pmd.max.alowed.violations}</maxAllowedViolations>
                        <rulesets>
                        	<ruleset>${pmd.ruleset.url}</ruleset>
                        </rulesets>
                    </configuration>
                    <executions>
                        <execution>
                        	<id>pmd-check</id>
	                        <phase>verify</phase>
	                        <goals>
	                            <goal>check</goal>
	                        </goals>
                        </execution>
                    </executions>
                </plugin>
	            <plugin>
	                <groupId>com.github.spotbugs</groupId>
	                <artifactId>spotbugs-maven-plugin</artifactId>
	                <version>${plugin.spotbugs.version}</version>
	                <configuration>
	                    <effort>Max</effort>
	                    <failOnError>false</failOnError>
	                    <threshold>Low</threshold>
	                    <xmlOutput>true</xmlOutput>
	                    <spotbugsXmlOutputDirectory>${project.build.directory}/spotbugs</spotbugsXmlOutputDirectory>
	                </configuration>
	                <executions>
	                    <execution>
	                    	<id>spotbugs-check</id>
	                        <phase>verify</phase>
	                        <goals>
	                            <goal>check</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.codehaus.mojo</groupId>
	                <artifactId>xml-maven-plugin</artifactId>
	                <version>${plugin.xml.version}</version>
	                <configuration>
	                    <transformationSets>
	                        <transformationSet>
	                            <dir>${project.build.directory}/spotbugs</dir>
	                            <outputDir>${project.build.directory}/spotbugs</outputDir>
	                            <stylesheet>fancy-hist.xsl</stylesheet>
	                            <fileMappers>
	                                <fileMapper
	                                        implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
	                                    <targetExtension>.html</targetExtension>
	                                </fileMapper>
	                            </fileMappers>
	                        </transformationSet>
	                    </transformationSets>
	                </configuration>
	                <executions>
	                    <execution>
	                    	<id>spotbugs-transform</id>
	                        <phase>verify</phase>
	                        <goals>
	                            <goal>transform</goal>
	                        </goals>
	                    </execution>
	                </executions>
	                <dependencies>
	                    <dependency>
	                        <groupId>com.google.code.findbugs</groupId>
	                        <artifactId>findbugs</artifactId>
	                        <version>${plugin.google.findbugs.version}</version>
	                    </dependency>
	                </dependencies>
	            </plugin>
	            <plugin>
	                <groupId>com.akathist.maven.plugins.launch4j</groupId>
	                <artifactId>launch4j-maven-plugin</artifactId>
	                <version>${plugin.launch4j.version}</version>
	                <executions>
	                    <execution>
	                        <id>launch4j-install</id>
	                        <phase>install</phase>
	                        <goals>
	                            <goal>launch4j</goal>
	                        </goals>
	                        <configuration>
	                            <headerType>console</headerType>
	                            <outfile>target/${app.name}.exe</outfile>
	                            <jar>target/${app.name}-jar-with-dependencies.jar</jar>
	                            <icon>${app.icon}</icon>
	                            <errTitle>encc</errTitle>
	                            <classPath>
	                                <mainClass>${app.main.class}</mainClass>
	                                <addDependencies>true</addDependencies>
	                                <preCp>anything</preCp>
	                            </classPath>
	                            <jre>
	                                <minVersion>${launch4j.jdk.version}</minVersion>
	                                <opts>
	                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
	                                </opts>
	                            </jre>
	                            <versionInfo>
	                                <fileVersion>${project.version}.0</fileVersion>
	                                <txtFileVersion>${project.version}.0</txtFileVersion>
	                                <fileDescription>${app.name}</fileDescription>
	                                <copyright>${launch4j.copyright}</copyright>
	                                <productVersion>${project.version}.0</productVersion>
	                                <txtProductVersion>${project.version}.0</txtProductVersion>
	                                <productName>${app.name}</productName>
	                                <originalFilename>${app.name}.exe</originalFilename>
	                                <internalName>${app.name}</internalName>
	                            </versionInfo>
	                        </configuration>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-project-info-reports-plugin</artifactId>
	                <version>${plugin.info.report.version}</version>
	                <configuration>
	                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
	                </configuration>
	            </plugin>
	        </plugins>
	    </pluginManagement>
	</build>
</project>
